Fixed about video not showing

--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -1357,20 +1357,15 @@ input.error, textarea.error, select.error {
 }
 
 /*--------------------------------------9. Video----*/
-.embed-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-  max-width: 100%;
+.about-video__container {
+  width: 100%;
+  height: auto;
+  padding-bottom: 2rem;
 }
 
-.embed-container iframe,
-.embed-container object,
-.embed-container embed {
+.about-video__container video {
   width: 100%;
   height: 100%;
-  padding-bottom: 2rem;
 }
 
 .bgvid {
